fix: prevent width overflow

--- a/src/styles/_global.sass
+++ b/src/styles/_global.sass
@@ -8,6 +8,7 @@ $colorBlack: #000000
 
 body
   overflow-x: hidden
+  max-width: 100vw
 
 a
   text-decoration: none
